bugfix: footer not showing

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
+    background-color: #171717;
+    
   }
 
   #root {
